--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "ext-dom": "*",
     "ext-json": "*",
     "doctrine/collections": "^1.5",
-    "guzzlehttp/guzzle": "^7.0",
+    "guzzlehttp/guzzle": "^6.5|^7.0",
     "mockery/mockery": "^1.3",
     "monolog/monolog": "^2.1",
     "psr/simple-cache": "^1.0",
