--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
     "mockery/mockery": "^1.3",
     "monolog/monolog": "^2.1",
     "psr/simple-cache": "^1.0",
-    "symfony/cache": "4.2.*",
-    "symfony/dependency-injection": "4.2.*",
-    "symfony/http-foundation": "4.2.*"
+    "symfony/cache": "^4.2",
+    "symfony/dependency-injection": "^4.2",
+    "symfony/http-foundation": "^4.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
