--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "psr/simple-cache": "^1.0",
     "symfony/cache": "^4.2",
     "symfony/dependency-injection": "^4.2",
-    "symfony/http-foundation": "^4.2"
+    "symfony/http-foundation": "^4.2|^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
