--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "mockery/mockery": "^1.3",
     "monolog/monolog": "^2.1",
     "psr/simple-cache": "^1.0",
-    "symfony/cache": "^4.2",
-    "symfony/dependency-injection": "^4.2",
+    "symfony/cache": "^4.2|^5.0",
+    "symfony/dependency-injection": "^4.2|^5.0",
     "symfony/http-foundation": "^4.2|^5.0"
   },
   "require-dev": {
