--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "doctrine/collections": "^1.5",
     "guzzlehttp/guzzle": "^6.5|^7.0",
     "mockery/mockery": "^1.3",
-    "monolog/monolog": "^2.1",
+    "monolog/monolog": "^1.0|^2.1",
     "psr/simple-cache": "^1.0",
     "symfony/cache": "^4.2|^5.0",
     "symfony/dependency-injection": "^4.2|^5.0",
