--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,11 @@
     "psr/simple-cache": "^1.0",
     "symfony/cache": "^4.2",
     "symfony/dependency-injection": "^4.2",
-    "symfony/http-foundation": "^4.2"
+    "symfony/http-foundation": "^4.2|^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
+    "friendsofphp/php-cs-fixer": "^3.0",
     "phploc/phploc": "^5.0",
     "sebastian/phpcpd": "^4.0",
     "phpstan/phpstan": "^0.12"
@@ -62,6 +63,7 @@
   "scripts": {
     "test": "vendor/bin/phpunit",
     "test-ci": "vendor/bin/phpunit --coverage-text",
+    "phpfix": "vendor/bin/php-cs-fixer --exclude=vendor --exclude=tests ./",
     "phploc": "vendor/bin/phploc --exclude=vendor --exclude=tests ./",
     "phpcpd": "vendor/bin/phpcpd --exclude=vendor --exclude=tests ./",
     "phpstan": "vendor/bin/phpstan analyse",
