--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": ">=7.2",
     "ext-dom": "*",
     "ext-json": "*",
     "doctrine/collections": "^1.5",
@@ -37,9 +37,7 @@
   "require-dev": {
     "phpunit/phpunit": "^8.0",
     "friendsofphp/php-cs-fixer": "^3.0",
-    "phploc/phploc": "^5.0",
-    "sebastian/phpcpd": "^4.0",
-    "phpstan/phpstan": "^0.12"
+    "phpstan/phpstan": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -64,11 +62,9 @@
     "test": "vendor/bin/phpunit",
     "test-ci": "vendor/bin/phpunit --coverage-text",
     "php-cs-fixer": "vendor/bin/php-cs-fixer fix -v",
-    "phploc": "vendor/bin/phploc --exclude=vendor --exclude=tests ./",
-    "phpcpd": "vendor/bin/phpcpd --exclude=vendor --exclude=tests ./",
     "phpstan": "vendor/bin/phpstan analyse",
     "travis": [
-      "composer phploc",
+      "composer php-cs-fixer",
       "composer phpstan"
     ]
   }
